--- a/main/html/content-areas/CA6 - Data/subtopic/6.10-data-models/6.10-data-models.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.10-data-models/6.10-data-models.html
@@ -243,6 +243,149 @@
             </pre>
         </ul>
 
+
+                              <!--quiz-->
+        <div class="quiz-container" id="quiz">
+            <div class="quiz-question" id="question"></div>
+            <div class="quiz-options" id="options"></div>
+            <div class="quiz-feedback" id="feedback"></div>
+            <button class="quiz-next" id="nextBtn" style="display:none;">Next</button>
+            <div class="quiz-result" id="result"></div>
+            <button class="quiz-retry" id="retryBtn" style="display:none;">Retry Quiz</button>
+        </div>
+
+  <script>
+    const quizData = [
+    {
+        question: "Which model organises data in a tree with one parent per child?",
+        options: ["Hierarchical", "Network", "Relational", "GraphQL"],
+        answer: "Hierarchical",
+        explanation: "The hierarchical model uses a tree-like one-to-many structure."
+    },
+    {
+        question: "Which data model is most commonly used in modern business databases?",
+        options: ["Hierarchical", "Network", "Relational", "Flat file"],
+        answer: "Relational",
+        explanation: "Relational databases dominate due to their flexibility and SQL support."
+    },
+    {
+        question: "What is the main drawback of the network model?",
+        options: [
+        "Only supports one-to-many relationships",
+        "Consumes too much storage",
+        "Complex to implement and navigate",
+        "Cannot be queried with SQL"
+        ],
+        answer: "Complex to implement and navigate",
+        explanation: "While powerful, network models are harder to manage."
+    },
+    {
+        question: "Which factor does NOT impact the choice of data model?",
+        options: [
+        "Efficiency of accessing data",
+        "Efficiency of data storage",
+        "User interface design",
+        "Complexity of implementation"
+        ],
+        answer: "User interface design",
+        explanation: "UI design isn’t a factor; model choice is about efficiency and complexity."
+    },
+    {
+        question: "Which model best suits many-to-many relationships like students and courses?",
+        options: ["Hierarchical", "Network", "Relational", "File-based"],
+        answer: "Network",
+        explanation: "Network models handle many-to-many naturally, though relational can also do so via linking tables."
+    }
+    ];
+
+
+        let currentQ = 0;
+        let score = 0;
+
+        const questionEl = document.getElementById("question");
+        const optionsEl = document.getElementById("options");
+        const feedbackEl = document.getElementById("feedback");
+        const resultEl = document.getElementById("result");
+        const nextBtn = document.getElementById("nextBtn");
+        const retryBtn = document.getElementById("retryBtn");
+
+        function showQuestion() {
+          const q = quizData[currentQ];
+          questionEl.textContent = q.question;
+          feedbackEl.textContent = "";
+          feedbackEl.className = "quiz-feedback";
+          nextBtn.style.display = "none";
+
+          optionsEl.innerHTML = "";
+          q.options.forEach(opt => {
+            const btn = document.createElement("button");
+            btn.textContent = opt;
+            btn.onclick = () => checkAnswer(opt, btn);
+            optionsEl.appendChild(btn);
+          });
+        }
+
+        function checkAnswer(answer, button) {
+          const q = quizData[currentQ];
+          const optionButtons = optionsEl.querySelectorAll("button");
+
+          // Disable all buttons after an answer
+          optionButtons.forEach(b => b.disabled = true);
+
+          if (answer === q.answer) {
+            score++;
+            button.classList.add("correct");
+            feedbackEl.textContent = "✅ Correct! " + q.explanation;
+            feedbackEl.classList.add("correct");
+          } else {
+            button.classList.add("wrong");
+            feedbackEl.textContent = `❌ Wrong. The correct answer is "${q.answer}". ${q.explanation}`;
+            feedbackEl.classList.add("wrong");
+
+            // Highlight correct answer
+            optionButtons.forEach(b => {
+              if (b.textContent === q.answer) {
+                b.classList.add("correct");
+              }
+            });
+          }
+
+          nextBtn.style.display = "block";
+        }
+
+        function nextQuestion() {
+          currentQ++;
+          if (currentQ < quizData.length) {
+            showQuestion();
+          } else {
+            showResult();
+          }
+        }
+
+        function showResult() {
+          questionEl.textContent = "";
+          optionsEl.innerHTML = "";
+          feedbackEl.textContent = "";
+          nextBtn.style.display = "none";
+          resultEl.textContent = `You scored ${score} out of ${quizData.length}! 🎉`;
+          retryBtn.style.display = "block";
+        }
+
+        nextBtn.addEventListener("click", nextQuestion);
+
+        retryBtn.addEventListener("click", () => {
+        currentQ = 0;
+        score = 0;
+        resultEl.textContent = "";
+        retryBtn.style.display = "none";
+        showQuestion();
+        });
+
+        nextBtn.addEventListener("click", nextQuestion);
+
+        // Start quiz
+        showQuestion();
+      </script>
     </main>
     
     <arrow-Nav>
